--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ server.port=1111
 
 #eureka.instance.prefer-ip-address=true
 #eureka.instance.hostname=192.168.1.105
+eureka.server.enable-self-preservation=false
 
 eureka.instance.hostname=localhost
 eureka.client.register-with-eureka=true
